--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,15 +2,18 @@
   "name": "server",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
-    "hono": "^4.7.2"
+    "@prisma/client": "6.4.1",
+    "hono": "^4.7.2",
+    "prisma": "^6.4.1"
   },
   "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "^20.11.17",
-    "tsx": "^4.7.1",
-    "@repo/typescript-config": "workspace:*"
+    "tsx": "^4.7.1"
   }
 }
