--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,19 +1,26 @@
 {
   "name": "server",
   "type": "module",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "typecheck": "tsc --noEmit"
+    "start": "tsx src/index.ts",
+    "typecheck": "tsc --noEmit",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:push": "prisma db push"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
     "@prisma/client": "6.4.1",
     "hono": "^4.7.2",
+    "tsx": "^4.7.1",
     "prisma": "^6.4.1"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
-    "@types/node": "^20.11.17",
-    "tsx": "^4.7.1"
+    "@types/node": "^20.11.17"
   }
 }
