--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
+    "hono": "^4.7.2",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.2.0"
+    "react-router": "^7.2.0",
+    "server": "workspace:*",
+    "valibot": "1.0.0-rc.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241112.0",
